# deskgui_example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  HomeView.vue
gui/: gui.h  gui_macos.mm  gui_windows.cpp
platform/: macos.mm  native.h  windows.cpp
